# HarmonyOS-BearPi

./: README.md  build.sh  clean.sh  小熊派程序编译和下载步骤.txt
applications/BearPi/BearPi-HM_Nano/sample/: BUILD.gn
applications/BearPi/BearPi-HM_Nano/sample/common/: mydbg.h
applications/BearPi/BearPi-HM_Nano/sample/common/APL/apl_delay/: delay.c  delay.h
applications/BearPi/BearPi-HM_Nano/sample/common/APL/apl_rf/: rf_if_app.c  rf_if_app.h  rf_if_hw.c  rf_if_hw.h  rf_thread.c  rf_thread.h
applications/BearPi/BearPi-HM_Nano/sample/common/APL/apl_rf/zxbee/: zxbee.c  zxbee.h
applications/BearPi/BearPi-HM_Nano/sample/common/APL/apl_utils/: apl_utils.c  apl_utils.h
applications/BearPi/BearPi-HM_Nano/sample/common/DRV/drv_key/: key.c  key.h
applications/BearPi/BearPi-HM_Nano/sample/common/DRV/drv_led/: fml_led.c  fml_led.h
applications/BearPi/BearPi-HM_Nano/sample/i3861_wifi_app/: BUILD.gn  app_main.c  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/i3861_wifi_app/zonesion/app/sensor/: sensor.c  sensor_thread.c
applications/BearPi/BearPi-HM_Nano/sample/sensor_ia1/: BUILD.gn  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/sensor_ia1/zonesion/app/dev/: E53_IA1.c  E53_IA1.h
applications/BearPi/BearPi-HM_Nano/sample/sensor_ia1/zonesion/app/sensor/: sensor.c
applications/BearPi/BearPi-HM_Nano/sample/sensor_is1/: BUILD.gn  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/sensor_is1/zonesion/app/dev/: E53_IS1.c  E53_IS1.h
applications/BearPi/BearPi-HM_Nano/sample/sensor_is1/zonesion/app/sensor/: sensor.c
applications/BearPi/BearPi-HM_Nano/sample/sensor_sc1/: BUILD.gn  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/sensor_sc1/zonesion/app/sensor/: sensor.c  sensor.h
applications/BearPi/BearPi-HM_Nano/sample/sensor_sc2/: BUILD.gn  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/sensor_sc2/zonesion/app/dev/: E53_SC2.c  E53_SC2.h
applications/BearPi/BearPi-HM_Nano/sample/sensor_sc2/zonesion/app/sensor/: sensor.c
applications/BearPi/BearPi-HM_Nano/sample/sensor_sf1/: BUILD.gn  readme.txt
applications/BearPi/BearPi-HM_Nano/sample/sensor_sf1/zonesion/app/sensor/: sensor.c  sensor_thread.h
