# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("application_mian") {
    sources = [
        "app_main.c",

        "../common/APL/apl_utils/apl_utils.c",
        "../common/APL/apl_rf/rf_if_hw.c",
        "../common/APL/apl_rf/rf_if_app.c",
        "../common/APL/apl_rf/rf_thread.c",
        "../common/APL/apl_rf/zxbee/zxbee.c",

        "../common/DRV/drv_led/fml_led.c",
        "../common/DRV/drv_key/key.c",
        "../common/APL/apl_delay/delay.c",

        "zonesion/app/sensor/sensor_thread.c",
        "zonesion/app/sensor/sensor.c",
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-function" ]
    cflags += [ "-Wno-empty-body" ]
    cflags += [ "-Wno-unused-parameter" ]
    cflags += [ "-Wno-type-limits" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-label" ]
    
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//base/hiviewdfx/interfaces/kits/hilog_lite/",

        "zonesion/app",
        "zonesion/app/sensor",
        "zonesion/app/dev",

        "../common/",
        "../common/APL",
        "../common/APL/apl_rf/zxbee/",
        "../common/BSP",
        "../common/DEV",
        "../common/DRV",
    ]

    defines = [
        #"WIFI_SERIAL",
    ]
}
